fix: navbar covering scrollbar

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,6 +3,7 @@
 
 :root {
   --header-height: 3.5rem;
+  --scrollbar-width: 0px;
 
   --black-color: hsl(220, 24%, 12%);
   --black-color-light: hsl(220, 24%, 15%);
@@ -20,10 +21,11 @@
   --z-fixed: 100;
 }
 
-/*========== Responsive typography ==========*/
+/* Detect scrollbar width for different browsers */
 @media screen and (min-width: 1024px) {
   :root {
     --normal-font-size: 1rem;
+    --scrollbar-width: 17px; /* Common scrollbar width on desktop */
   }
 }
 
@@ -38,6 +40,8 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
+  scrollbar-gutter: stable;
+  overflow-x: hidden;
 }
 
 ul {
@@ -58,10 +62,11 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: calc(100vw - var(--scrollbar-width));
   background-color: var(--black-color);
   box-shadow: 0 2px 16px hsla(220, 32%, 8%, .3);
   z-index: var(--z-fixed);
+  box-sizing: border-box;
 }
 
 /*=============== NAV ===============*/
